@@ -5,7 +5,7 @@
     <groupId>io.github.freya022</groupId>
     <artifactId>BotCommands</artifactId>
     <!-- Major for big breaking changes, minor for small breaking changes / possibly features, revision for bugfix/features -->
-    <version>2.6.3-SNAPSHOT</version>
+    <version>2.7.1-SNAPSHOT</version>
     <name>BotCommands</name>
 
     <description>A JDA command framework (&amp; much more) which helps developing your bots fast</description>
@@ -76,7 +76,6 @@
                             <release>17</release>
                             <additionalJOptions>
                                 <additionalJOption>-Xdoclint:-missing</additionalJOption> <!-- No need to print "no comment" warnings -->
-                                <additionalJOption>--enable-preview</additionalJOption>
                             </additionalJOptions>
                             <links>
                                 <link>https://ci.dv8tion.net/job/JDA5/javadoc</link>
